tests/tooling/fixtures/native/recovery/negative/negative_assignment_compound_bitwise_rhs_bool.objc3
// Expected diagnostic code(s): O3S206.
module NegativeAssignmentCompoundBitwiseRhsBool;

fn main() -> i32 {
  let value = 3;
  let flag = true;
  value |= flag;
  return value;
}
